fix verify
